--- a/config-server/configs/notification-service.yml
+++ b/config-server/configs/notification-service.yml
@@ -1,6 +1,12 @@
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=thaivanlam373@gmail.com
-spring.mail.password=cxpr wdis cawc sctx
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring:
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: thaivanlam373@gmail.com
+    password: cxpr wdis cawc sctx
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
