--- a/notification-service/src/main/resources/application.yml
+++ b/notification-service/src/main/resources/application.yml
@@ -1,4 +1,10 @@
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+    virtual-host: "/"
   application:
     name: notification-service
   security:
@@ -40,3 +46,9 @@ spring:
 
 server:
   port: 8003
+
+queue:
+  notification:
+    queue: notification-queue
+    exchange: notification-exchange
+    routing-key: notification-routing-key
